# youdo-test-task

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tech-task.md
src/: config.py
src/bot/: bot.py  keyboards.py
src/bot/handlers/: applications.py  commands.py  posts.py
src/database/: db.py  models.py
src/parser/: channel_parser.py
src/utils/: validators.py
